<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微爱</string>

    <!-- 聊天 -->
    <string name="fragment_chat">聊天</string>

    <!-- 我的 -->
    <string name="fragment_mine">我的</string>

    <!-- 时光 -->
    <string name="fragment_time">时光</string>

    <!-- 定位 -->
    <string name="fragment_location">定位</string>
    <string name="my_location">我的位置</string>

    <!-- 个人设置 -->
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="phone">手机</string>

    <!-- 登录/注册 -->
    <string name="login">登录</string>
    <string name="subtle_fragrance_floats">暗香浮动☞Darling</string>
    <string name="please_enter_account_information">请输入账户信息</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="password_malformed">密码格式错误</string>
    <string name="old_password_not_empty">原密码不能为空</string>
    <string name="new_password_not_empty">新密码不能为空</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="old_new_passwords_not_same">原密码和新密码不能相同</string>
    <string name="passwords_not_match_please_check">密码不一致，请检查</string>
    <string name="login_successful">登录成功</string>
    <string name="username_or_password_incorrect">用户名或密码错误</string>
    <string name="please_enter_login_name">请输入用户名</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="account_number">账号:</string>
    <string name="phone_number_reset_password">手机号码重置密码</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="mail_reset_password">邮箱重置密码</string>
    <string name="enter_account_not_exist">您输入的账号不存在,请重新输入</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="enter_account_number">输入账号</string>
    <string name="to_login">去登录</string>
    <string name="registration">注册</string>
    <string name="registration_success">注册成功</string>
    <string name="can_not_login">无法登录?</string>
    <string name="new_user_registration">新用户注册</string>
    <string name="mailbox_password">邮箱 - 密码</string>
    <string name="phone_number_password">手机号码 - 密码</string>
    <string name="phone_number_sms_verification_code">手机号码 - 短信验证码</string>
    <string name="no_user_found_with_email">没有找到此邮件的用户</string>
    <string name="no_user_found_with_username">没有找到此用户名的用户</string>
    <string name="password_format">注(密码格式): 字母开头,允许字母数字下划线,6-8个字符</string>
    <string name="mailbox_reset_password_successful">重置密码请求成功,请到 %1$s 邮箱进行密码重置操作</string>
    <string name="third_login">----- 使用第三方账号登录 -----</string>

    <!-- 通用名 -->
    <string name="setting">设置</string>
    <string name="exit">退出登录</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="editor">编辑</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="mr">先生</string>
    <string name="ms">女士</string>
    <string name="submit">提交</string>
    <string name="not_set">未设置</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="expand">展开</string>
    <string name="collapse">收起</string>
    <string name="share">分享</string>
    <string name="copy">复制</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="point_praise">点赞</string>
    <string name="go_upload">去上传</string>
    <string name="go_published">去发布</string>
    <string name="unbound">未绑定</string>
    <string name="unverified">未验证</string>
    <string name="upload_successful">上传成功</string>
    <string name="update_successful">更新成功</string>
    <string name="verification_successful">验证成功</string>
    <string name="binding_successful">绑定成功</string>
    <string name="verification_code_sent_successfully">验证码发送成功</string>
    <string name="photo_upload_failed">照片上传失败</string>
    <string name="photo_upload_successful">照片上传成功</string>
    <string name="photo_being_uploaded_please_wait">照片正在上传中,请稍后....</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="commit_not_empty">提交内容不能为空</string>
    <string name="content_not_changed">内容未改变,无需提交</string>
    <string name="failed_get_data">获取数据失败</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_data">没有数据</string>
    <string name="all_displayed">～～ 已显示全部 ～～</string>

</resources>
