<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <com.mmt.microlove.view.CircleImageView
        android:id="@+id/iv_user_icon"
        android:layout_width="@dimen/icon_max"
        android:layout_height="@dimen/icon_max"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_max"
        android:src="@mipmap/icon_default"
        app:border_color="@color/white"
        app:border_width="2dp" />


    <com.mmt.microlove.view.DeletableEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/edt_view_bg"
        android:drawableRight="@drawable/btn_delete_selector"
        android:gravity="center"
        android:hint="@string/please_enter_login_name"
        android:maxLines="1"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/font_small" />

    <View style="@style/spaceLine" />

    <com.mmt.microlove.view.DeletableEditText
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/edt_view_bg"
        android:drawableRight="@drawable/btn_delete_selector"
        android:gravity="center"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/font_small" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_normal"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/btn_content_blue_selector"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal">

        <TextView
            android:id="@+id/tv_not_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:text="@string/can_not_login"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_small" />


        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:text="@string/new_user_registration"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_small" />
    </RelativeLayout>
</LinearLayout>