<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <com.mmt.microlove.view.CircleImageView
        android:id="@+id/ivPhoto"
        android:layout_width="@dimen/img_max"
        android:layout_height="@dimen/img_max"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_max"
        android:layout_marginTop="@dimen/margin_max"
        android:src="@mipmap/icon_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textSize="@dimen/text_size_large" />

        <com.mmt.microlove.view.DeletableEditText
            android:id="@+id/edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_normal"
            android:background="@null"
            android:drawableRight="@drawable/btn_delete_selector"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_large"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <View style="@style/spaceLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/gender"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_normal"
            android:drawableEnd="@mipmap/more"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_large"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <View style="@style/spaceLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_normal"
            android:drawableEnd="@mipmap/more"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_large"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />
    </LinearLayout>
</LinearLayout>